Fixed log path overflow

--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -2379,6 +2379,7 @@ textarea {
 			}
 
 			dd.log {
+				overflow: hidden;
 				flex-wrap: nowrap;
 
 				.logPath {
